# gym

./: .env.md  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  codecov.yml  db.sqlite3  docker-compose.yml  get_setting.py  get_token.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  school_insert.py
.github/workflows/: django.yml
crawling/: school_beautifulsoup.py  school_selenium.py
gym/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
gym/settings/: common.py  dev.py  prod.py
reminder/: conftest.py  crawling.py  models.py  task.py  tasks.py  tests.py  urls.py  views.py
reminder/crawling/: common.py  create_reminder.py  sadang.py
reminder/kakao/: env_loader.py  save_token.py  send_reminder.py
reminder/management/commands/: get_access_token_url.py  save_access_token.py
reminder/tests/: conftest.py  test_crawling.py  test_create_reminder.py  test_model.py  test_save_token.py  test_tasks.py  test_views.py
