[tool.poetry]
name = "gym"
version = "0.1.0"
description = ""
authors = ["sc303030 <lkh6035@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
django-model-utils = "^4.3.1"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
celery = "^5.2.7"
django-celery-results = "^2.4.0"
django-redis = "^5.2.0"
gevent = "^22.10.2"
django-celery-beat = "^2.4.0"
python-dotenv = "^0.21.0"
pymysql = "^1.0.2"
mysqlclient = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5.2"
pytest-celery = "^0.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"