[tool.poetry]
name = "gym"
version = "0.1.0"
description = ""
authors = ["sc303030 <lkh6035@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
django-model-utils = "^4.3.1"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
celery = "^5.2.7"
django-celery-results = "^2.4.0"
django-redis = "^5.2.0"
gevent = "^22.10.2"
django-celery-beat = "^2.4.0"
python-dotenv = "^0.21.0"
pymysql = "^1.0.2"
mysqlclient = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5.2"
pytest-celery = "^0.0.0"
pre-commit = "^2.21.0"
isort = "^5.11.4"
black = "^22.12.0"
pyright = "^1.1.286"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
lines_between_sections = true
skip = [".venv", "venv", "deploy", ".git", ".github"]
extend_skip = [".md", ".json"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
      \.git
    | \.gitignore
    | \.github
    | \.venv
    | \venv
    | \.pytest_cache
    | \.deploy
)
'''
[tool.pyright]
pythonVersion = '3.11'
include = ["gym"]
exclude = [
    "**/__pycache__",
    "**/.venv/",
    "**/venv/",
    "**/deploy/",
    "**/.git/",
    "**/.github/",
]
ignore = []
stubPath = ""
reportMissingImports = false
reportMissingTypeStubs = false

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "reminder/tests",
]
DJANGO_SETTINGS_MODULE = "gym.settings.dev"
addopts = "--reuse-db --cov=reminder/tests"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]



[tool.coverage.run]
branch = true
omit = ["reminder/tests/__init__.py",]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
